fixed edit and scrollbar

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   max-width: 500px;
   margin: 0 auto;
